Add information into namespaces